<resources>
    <string name="app_name">Proyecto</string>
    <!--Strings para la pantalla principal -->
    <string name="tvTitle">LOG IN FI UNAM</string>
    <string name="btnValidar">VALIDAR</string>
    <string name="tfNombre">Inserta tu nombre</string>
    <string name="tfApe">Inserta tus apellidos</string>
    <string name="tfNacimiento">Fecha de Nacimiento</string>
    <string name="tfCuenta">Numero de cuenta</string>
    <string name="spCarrera">Selecciona tu carrera</string>

    <!--Strings descripción de imagenes-->
    <string name="fiLogo">FI LOGO</string>
    <string name="imgUser">imgUser</string>
    <string name="Carrera">Carrera</string>

    <!--Strings para mostrar los errores-->
    <string name="errorGral">Ingresa el dato</string>
    <string name="errorName">Por favor ingresa el nombre</string>
    <string name="errorApe">Por favor ingresa los apellidos</string>
    <string name="errorNacimiento">Por favor ingresa la fecha de nacimiento</string>
    <string name="errorCuenta">Por favor ingresa el numero de cuenta</string>
    <string name="errorCuentaSize">El numero de cuenta ingresado es incompatible</string>
    <string name="errorCarrera">Por favor selecciona la carrera</string>
    <string name="errorObject">No existe objeto</string>
    <string name="errorAge">La edad no es permitida</string>

    <!--Strings para la pantalla de datos-->
    <string name="UNAM">Universidad Nacional Autónoma de México</string>
    <string name="dataTitle">Datos del usuario</string>
    <string name="home" translatable="false">HOME</string>
    <string name="edad">Tu edad es:\u0020</string>
    <string name="age">\u0020años.</string>

    <!--Strings identificadores-->
    <string name="clave" translatable="false">alumno</string>
    <string name="picker" translatable="false">dataPicker</string>

   <!--Strings diseño de texto-->
    <string name="diagonal" translatable="false">/</string>

   <!--Integers-->
    <integer name="anio" >2005</integer>
    <integer name="minNum">8</integer>
    <integer name="maxNum">10</integer>
    <integer name="maxNames">30</integer>

    <!--Inicializadores-->
    <integer name="cero">0</integer>
    <string name="vacio" translatable="false"></string>

    <!--Carreras-->
    <string name="iAero">Ingeniería Aeroespacial</string>
    <string name="iAmbiental">Ingeniería Ambiental</string>
    <string name="iBiomedica">Ingeniería Biomédica</string>
    <string name="iCivil">Ingeniería Civil</string>
    <string name="iCompu">Ingeniería Computación</string>
    <string name="iEE">Ingeniería Eléctrica-electrónica</string>
    <string name="iGeofi">Ingeniería Geofísica</string>
    <string name="iGeolo">Ingeniería Geológica</string>
    <string name="iGeoma">Ingeniería Geomática</string>
    <string name="iIndustrial">Ingeniería Industrial</string>
    <string name="iMeca">Ingeniería Mecánica</string>
    <string name="iMecatronica">Ingeniería Mecatrónica</string>
    <string name="iMinas">Ingeniería Minas</string>
    <string name="iPetro">Ingeniería Petrolera</string>
    <string name="iTelecom">Ingeniería Telecomunicaciones</string>




</resources>