<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgfi"
    tools:context=".LOG_IN">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="177dp"
        android:layout_height="92dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/tvTitle"
        android:textAlignment="center"
        android:textColor="?android:attr/colorActivatedHighlight"
        android:textSize="36sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.131"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.059" />

    <Button
        android:id="@+id/btnValidar"
        android:layout_width="114dp"
        android:layout_height="57dp"
        android:background="@android:color/holo_blue_dark"
        android:fontFamily="sans-serif-condensed-light"
        android:onClick="clkValidar"
        android:text="@string/btnValidar"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spCarreras"
        app:layout_constraintVertical_bias="0.281" />

    <EditText
        android:id="@+id/tfNombre"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:autofillHints="@string/tfNombre"
        android:background="@color/tfBackground"
        android:ems="10"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/tfNombre"
        android:inputType="textPersonName"
        android:maxLength="@integer/maxNames"
        android:maxLines="1"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textColorHint="@color/tfFont"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:layout_constraintVertical_bias="0.007" />

    <EditText
        android:id="@+id/tfApe"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:autofillHints="@string/tfApe"
        android:background="@color/tfBackground"
        android:ems="10"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/tfApe"
        android:inputType="textPersonName"
        android:maxLength="@integer/maxNames"
        android:maxLines="1"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textColorHint="@color/tfFont"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tfNombre"
        app:layout_constraintVertical_bias="0.026" />

    <EditText
        android:id="@+id/tfNacimiento"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:autofillHints="@string/tfNacimiento"
        android:background="@color/tfBackground"
        android:clickable="true"
        android:ems="10"
        android:focusable="false"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/tfNacimiento"
        android:inputType="textPersonName"
        android:maxLength="10"
        android:maxLines="1"
        android:onClick="onClick"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textColorHint="@color/tfFont"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tfApe"
        app:layout_constraintVertical_bias="0.069" />

    <EditText
        android:id="@+id/tfCuenta"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:autofillHints="@string/tfCuenta"
        android:background="@color/tfBackground"
        android:ems="10"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/tfCuenta"
        android:inputType="number"
        android:maxLength="@integer/maxNum"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textColorHint="@color/tfFont"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tfNacimiento"
        app:layout_constraintVertical_bias="0.115" />

    <Spinner
        android:id="@+id/spCarreras"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:background="?attr/colorButtonNormal"
        android:entries="@array/carrerasFI"
        android:spinnerMode="dialog"
        android:textAlignment="center"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tfCuenta"
        app:layout_constraintVertical_bias="0.116" />

    <ImageView
        android:id="@+id/fiLogo"
        android:layout_width="141dp"
        android:layout_height="129dp"
        android:contentDescription="@string/fiLogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.192"
        app:layout_constraintStart_toEndOf="@+id/tvTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026"
        app:srcCompat="@drawable/logofi" />

</androidx.constraintlayout.widget.ConstraintLayout>